<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ValorantBlack">

    <TextView
        android:id="@+id/stats_total_clicks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stats_total_clicks"
        android:textColor="#fff"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0" />

    <TextView
        android:id="@+id/stats_sova_clicks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stats_sova_clicks"
        android:textColor="#fff"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/stats_raze_clicks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stats_raze_clicks"
        android:textColor="#fff"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.17" />

    <TextView
        android:id="@+id/stats_sage_clicks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stats_sage_clicks"
        android:textColor="#fff"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.24" />

    <TextView
        android:id="@+id/stats_reyna_clicks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stats_reyna_clicks"
        android:textColor="#fff"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.31" />

    <TextView
        android:id="@+id/stats_phoenix_clicks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stats_phoenix_clicks"
        android:textColor="#fff"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.38" />

    <TextView
        android:id="@+id/stats_breach_clicks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stats_breach_clicks"
        android:textColor="#fff"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45" />

    <TextView
        android:id="@+id/stats_brimstone_clicks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stats_brimstone_clicks"
        android:textColor="#fff"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.52" />

    <TextView
        android:id="@+id/stats_jett_clicks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stats_jett_clicks"
        android:textColor="#fff"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.59" />
    <TextView
        android:id="@+id/stats_viper_clicks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stats_viper_clicks"
        android:textColor="#fff"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.66" />

    <TextView
        android:id="@+id/stats_cypher_clicks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stats_cypher_clicks"
        android:textColor="#fff"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.73" />

    <TextView
        android:id="@+id/stats_omen_clicks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stats_omen_clicks"
        android:textColor="#fff"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8" />

    <TextView
        android:id="@+id/stats_killjoy_clicks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stats_killjoy_clicks"
        android:textColor="#fff"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.87" />

    <TextView
        android:id="@+id/stats_current_money"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/valorant_coins"
        android:drawableRight="@drawable/valorant_coins"
        android:text="@string/stats_current_coins"
        android:textColor="#fff"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95" />

</androidx.constraintlayout.widget.ConstraintLayout>