<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="Valorant">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_home"
                    android:title="Clicker"
                    android:icon="@drawable/ic_home" />
            </group>
            <item
                android:id="@+id/nav_agents"
                android:title="Agents"
                android:icon="@drawable/ic_agents" />
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_shop"
                    android:title="Shop"
                    android:icon="@drawable/ic_shop" />
            </group>
        </menu>
    </item>

    <item android:title="Other">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_stats"
                    android:title="@string/stats_title"
                    android:icon="@drawable/ic_stat" />
            </group>
            <item
                android:id="@+id/nav_settings"
                android:title="@string/settings_title"
                android:icon="@drawable/ic_settings" />
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_about"
                    android:title="@string/about_title"
                    android:icon="@drawable/ic_about" />
            </group>
        </menu>
    </item>

</menu>